/*
 * $Id: ChangeLog,v 1.5221 2006/10/24 16:04:39 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-10-25 12:16 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/txtline.c
    ! Added missing support for SOFT CR in hb_readLine()
    * Some cleanup, simplifications, and optimizations

2006-10-24 18:06 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   *source/rdd/bmdbfcdx/bmdbfcdx1.c
    % Optimized BM_DbGetFilterArray() checking of long in long and byte in byte.

2006-10-22 00:42 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/pp/ppcore.c
    ! Fixed ConvertPatterns() to disregard escaped markers.

  * utils/xbscript/xbscript.prg
    * Corrected typos in CompileRule() related to #[x]uncommand/#[x]untranslate
    * Corrected #[x]uncommand/#[x]untranslate to scan most recently added rule first.
    * Corrected #xuncommand/#xuntranslate to disregard bX flag when searching

2006-10-22 01:18 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/compiler/harbour.c
    ! Fixed a segfault when compiling multiple sources with debug info.

2006-10-20 18:38 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   *source/rdd/bmdbfcdx/bmdbfcdx1.c
    ! minor fix.

2006-10-20 08:30 UTC-0300 Luiz Rafael Culik<luiz at xharbour.com.br>
  * source/rtl/fstemp.c
    ! minor bug fixed on FHANDLE HB_EXPORT hb_fsCreateTemp() function
      That was producing some errors on dbfcdx,since the last char of the filename generated
      has an trash
  * source/cgi/tframe.prg
    ! minor fix

2006-10-18 20:00 UTC+0300 Pavel Tsarenko <tpe2@mail.ru>
  * source/ct/bit1.c
    * added support for 32-bit numbers in NumAnd(), NumOr() and NumXor() for
      clipper compatibility. In fact the behavior of these functions is
      different from NG documentation
  + tests/cttest/bit1.prg